Add initial content

--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -10,11 +10,14 @@
     <div class="container">
       <header>
         <ul class="nav">
-          <li>
-            <a href="/">home<small>where the heart is</small></a>
+        <li>
+            <a href="/">home<small>rido.dev</small></a>
           </li>
           <li>
-            <a href="/about">about<small>all about this</small></a>
+            <a href="https://blog.rido.dev">blog<small>Rido blog</small></a>
+          </li>
+          <li>
+            <a href="https://apps.rido.dev">apps<small>Rido apps</small></a>
           </li>
         </ul>
         <h1>{{ title }}</h1>
