--- a/src/site/_includes/footer.njk
+++ b/src/site/_includes/footer.njk
@@ -1,6 +1,8 @@
 <footer>
 <p>
-  The code is maintained by <a href="https://twitter.com/philhawksworth">Phil Hawksworth</a> for his own reference and as a quick start for some of his projetcs, but take it if it is useful to you too. Find the repo on <a href="{{ pkg.repository.url }}">Github</a>.
+  The code is maintained by <a href="https://twitter.com/rido">@ridomin</a> based on the work from <a href="https://twitter.com/philhawksworth">Phil Hawksworth</a>.  
+ 
+ Find the repo on <a href="{{ pkg.repository.url }}">Github</a>.
 </p>
 <p>
   This page was generated on {{ site.buildTime | dateDisplay('LLL d, yyyy - HH:mm') }}
