--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,6 @@ $bp-mid: "(min-width: 740px)";
 $bp-wide: "(min-width: 1200px)";
 
 // Colours
-$page-color: #385780;
-$text-color: #fff;
-$accent-color: #213b5c;
+$page-color: #f1efe3;
+$text-color: rgb(0, 0, 0);
+$accent-color: #4137ca;
