--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -11,13 +11,13 @@
       <header>
         <ul class="nav">
         <li>
-            <a href="/">home<small>rido.dev</small></a>
+            <a href="/">home<small>rido.dev</small>This site</a>
           </li>
           <li>
             <a href="https://blog.rido.dev">blog<small>Rido blog</small></a>
           </li>
           <li>
-            <a href="https://apps.rido.dev">apps<small>Rido apps</small></a>
+            <a href="https://appxserver.azurewebsites.net">apps<small>Rido apps</small></a>
           </li>
         </ul>
         <h1>{{ title }}</h1>
