--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -11,7 +11,7 @@
       <header>
         <ul class="nav">
         <li>
-            <a href="/">home<small>rido.dev</small>This site</a>
+            <a href="/">home<small>Rido.dev</small></a>
           </li>
           <li>
             <a href="https://blog.rido.dev">blog<small>Rido blog</small></a>
