--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -17,7 +17,7 @@
             <a href="https://blog.rido.dev">blog<small>Rido blog</small></a>
           </li>
           <li>
-            <a href="https://appxserver.azurewebsites.net">apps<small>Rido apps</small></a>
+            <a href="https://appxserver.azurewebsites.net/apps/">apps<small>Rido apps</small></a>
           </li>
         </ul>
         <h1>{{ title }}</h1>
